Restore favicon and clapping sound

--- a/content/home.html
+++ b/content/home.html
@@ -6,9 +6,10 @@
   <script type="application/javascript;version=1.8" src="js/colorUtils.js"></script>
   <script type="application/javascript;version=1.8" src="js/gs.js"></script>
   <link type="text/css" rel="stylesheet" href="style.css" />
-
+  <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
+  <audio src="clap.ogg" id="clap"></audio>
   <div class="wrapper clearfix">
     <div id="header" class="row">
       <h1 class="c4">Roland @MoMo's dashboard</h1>
