--- a/content/home.html
+++ b/content/home.html
@@ -39,6 +39,14 @@
           <img class="centered" src="i/loader.gif">
         </div>
       </div>
+      <div class="c2">
+        <div class="legend">
+          Tag cloud for today
+        </div>
+        <div id="tag_cloud">
+          <img class="centered" src="i/loader.gif">
+        </div>
+      </div>
     </div>
     
     <div id="feeds">
