updated some css styles and favicon transparency

--- a/content/home.html
+++ b/content/home.html
@@ -6,7 +6,7 @@
   <script type="application/javascript;version=1.8" src="js/colorUtils.js"></script>
   <script type="application/javascript;version=1.8" src="js/gs.js"></script>
   <link type="text/css" rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="favicon1.png" />
 </head>
 <body>
   <audio src="clap.ogg" id="clap"></audio>
@@ -24,19 +24,19 @@
     -->
     <div class="graph row">
       <div class="c2">
-        <div id="comment_pattern">
-          <img src="i/loader.gif">
-        </div>
         <div class="legend">
           Comment pattern today, total = <span id="n_comments"></span>
         </div>
+        <div id="comment_pattern">
+          <img class="centered" src="i/loader.gif">
+        </div>
       </div>
       <div class="c2">
-        <div id="keyword_pattern">
-          <img src="i/loader.gif">
-        </div>
         <div class="legend">
           Hot keywords today
+        </div>
+        <div id="keyword_pattern">
+          <img class="centered" src="i/loader.gif">
         </div>
       </div>
     </div>
@@ -44,46 +44,46 @@
     <div id="feeds">
     
       <div class="row">
-        <div class="c2">
+        <div class="listContainer c2">
           <h2>Most active topics in the last 24 hours</h2>
           <div class="d1">
             <ol>
-            <img src="i/loader.gif">
+            <img class="centered" src="i/loader.gif">
             </ol>
           </div>
         </div>
-        <div class="c2">
+        <div class="listContainer c2">
           <h2>Last 5 created topics</h2>
           <div class="d2">
             <ol>
-            <img src="i/loader.gif">
+            <img class="centered" src="i/loader.gif">
             </ol>
         </div>
         </div>
-        <div class="c2">
+        <div class="listContainer c2">
           <h2>Random five created today</h2>
           <div class="d3">
             <ol>
-            <img src="i/loader.gif">
+            <img class="centered" src="i/loader.gif">
             </ol>
           </div>
         </div>
       </div>
       
       <div class="row">
-        <div class="c2">
+        <div class="listContainer c2">
           <h2>Recently solved topics</h2>
           <div class="d4">
             <ol>
-            <img src="i/loader.gif">
+            <img class="centered" src="i/loader.gif">
             </ol>
           </div>
         </div>
-        <div class="c2">
+        <div class="listContainer c2">
           <h2>Last active solved topics</h2>
           <div class="d5">
             <ol>
-            <img src="i/loader.gif">
+            <img class="centered" src="i/loader.gif">
             </ol>
           </div>
         </div>
