--- a/content/home.html
+++ b/content/home.html
@@ -26,7 +26,9 @@
     <div id="header" class="row">
       <h1 class="c4">Roland's Get Satisfaction Dashboard</h1>
       <div class="c2 right">
-        <span class="status"><img src="i/loader.gif"> </span> <a href="http://getsatisfaction.com/mozilla_messaging/">GS&hearts;</a>
+        <span class="status"><img src="i/loader.gif"> </span>
+        <a href="#" onclick="reboot(); return false;">(refresh)</a>
+        <a href="http://getsatisfaction.com/mozilla_messaging/">GS&hearts;</a>
       </div>
     </div>
     <!--
