Move the refresh link to the left.

--- a/content/home.html
+++ b/content/home.html
@@ -24,10 +24,12 @@
   <audio src="clap.ogg" id="clap"></audio>
   <div class="wrapper clearfix">
     <div id="header" class="row">
-      <h1 class="c4">Roland's Get Satisfaction Dashboard</h1>
+      <div class="c4">
+        <h1 style="display: inline-block">Roland's Get Satisfaction Dashboard</h1>
+        <a style="font-size: smaller" href="#" onclick="reboot(); return false;">(refresh)</a>
+      </div>
       <div class="c2 right">
         <span class="status"><img src="i/loader.gif"> </span>
-        <a href="#" onclick="reboot(); return false;">(refresh)</a>
         <a href="http://getsatisfaction.com/mozilla_messaging/">GS&hearts;</a>
       </div>
     </div>
