Add a title tag so I can find the dashboard in my firefox tabs

--- a/content/home.html
+++ b/content/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Roland's Get Satisfaction Dashboard</title>
   <script src="protovis-3.2/protovis-d3.2.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script type="application/javascript;version=1.8" src="js/colorUtils.js"></script>
